# aoc-2025

./: .gitignore  README.md  main.py  pyproject.toml
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: checks.yml
solutions/: __init__.py  utils.py
solutions/day1/: __init__.py  day1.py  test_day1.py
solutions/day10/: __init__.py  day10.py  test_day10.py
solutions/day11/: __init__.py  day11.py  test_day11.py
solutions/day12/: __init__.py  day12.py  test_day12.py
solutions/day2/: __init__.py  day2.py  test_day2.py
solutions/day3/: __init__.py  day3.py  test_day3.py
solutions/day4/: __init__.py  day4.py  test_day4.py
solutions/day5/: __init__.py  day5.py  test_day5.py
solutions/day6/: __init__.py  day6.py  test_day6.py
solutions/day7/: __init__.py  day7.py  test_day7.py
solutions/day8/: __init__.py  day8.py  test_day8.py
solutions/day9/: __init__.py  day9.py  test_day9.py
