[project]
name = "aoc-2025"
version = "0.1.0"
description = "Advent of Code 2025 solutions"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]  # allow assert in tests

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["solutions"]
python_files = ["test_*.py"]
